[package]
name = "uncertainty"
version = "0.2.0"
authors = ["Karl Voss <karl.p.voss@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "A crate to allow the creation and arithmetic operations on numbers with uncertain values."
keywords = ["float", "uncertain", "arithmetic", "absolute", "relative"]
repository = "https://github.com/karlpvoss/uncertainty-rs"
homepage = "http://karlpvoss.com/projects/uncertainty-rs"
documentation = "http://docs.rs/uncertainty"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
approx = "0.3.2"
